use isBlank insteadof isEmpty for non-unicode blank chars support, refactoring